--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,4 @@ moka = { version = "0.11.2", features = ["future"] }
 cached = "0.44.0"
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
+mimalloc = "0.1.42"
